# UIR-CourseRec

./: .gitignore  CITATION.cff  README.md  SKILLS.md  pyproject.toml  requirements.txt  run.py  setup_environment.py
UIR/: .gitignore  README_DEVELOPMENT.md
UIR/Scripts/: pipeline.py  weight_optimization.py
UIR/config/: run.yaml
UIR/results/: all_dqn_Weighted-Usefulness-as-Rwd_nbskills_46_k_2_run_0.txt  final_dqn_Weighted-Usefulness-as-Rwd_nbskills_46_k_2_run_0.json
