[project]
name = "reward-shaping-course-rec"
version = "0.1.0"
description = "RL-based job-oriented course recommendation with usefulness-based reward shaping"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
authors = [{ name = "Paper authors" }]
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
stable-baselines3 = "2.2.1"
pyyaml = "6.0.1"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
gymnasium = ">=0.28.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
tqdm = ">=4.62.0"
tensorboard = ">=2.13.0"
tensorflow = ">=2.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
